# pr2_controller_framework

./: .gitignore  CMakeLists.txt  README.md  controller_plugins.xml  package.xml
action/: GuardedApproach.action  ManipulationController.action  PR2JointCommand.action
config/: client_config.yaml  controller_config.yaml
include/manipulation_client/: manipulation_client.hpp
include/manipulation_controller/: manipulation_controller.hpp
include/pr2_cartesian_controllers/: approach_controller.hpp  controller_template.hpp  manipulation_controller.hpp  move_controller.hpp
include/pr2_controller/: joint_controller.hpp
include/pr2_joint_controllers/: joint_controller.hpp
launch/: pr2_cartesian_controllers.launch  pr2_controller.launch
msg/: PR2JointControlReference.msg  PR2JointControllerFeedback.msg
pr2_algorithms/: CMakeLists.txt  package.xml
pr2_algorithms/action/: ECTSDebug.action
pr2_algorithms/cfg/: ects.cfg
pr2_algorithms/include/pr2_algorithms/: algorithm_base.hpp  ects_controller.hpp  folding_assembly_controller.hpp  folding_assembly_estimator.hpp  manipulation_control_algorithm.hpp  manipulation_ekf.hpp  robot_simulator.hpp
pr2_algorithms/include/pr2_algorithms/dexterous_manipulation/: manipulation_control_algorithm.hpp  manipulation_ekf.hpp
pr2_algorithms/include/pr2_algorithms/mechanism_identification/: adaptive_velocity_controller.hpp  ects_controller.hpp  kalman_filter.hpp  rotational_kalman.hpp
pr2_algorithms/launch/: ects_controller.launch  kalman_test.launch
pr2_algorithms/msg/: TestBedECTSFeedback.msg  TestBedFeedback.msg  TestBedFoldingFeedback.msg  TestKalmanFeedback.msg
pr2_algorithms/src/: algorithm_base.cpp  chainjnttojacdotsolver.cpp  ects_controller.cpp  folding_assembly_controller.cpp  folding_assembly_estimator.cpp  manipulation_control_algorithm.cpp  manipulation_ekf.cpp  robot_simulator.cpp  test_bed.cpp  test_bed_ects.cpp  test_bed_folding.cpp  test_bed_manipulation.cpp  test_kalman.cpp
pr2_algorithms/src/dexterous_manipulation/: manipulation_control_algorithm.cpp  manipulation_ekf.cpp
pr2_algorithms/src/folding_assembly/: folding_assembly_controller.cpp  folding_assembly_estimator.cpp
pr2_algorithms/src/mechanism_identification/: adaptive_velocity_controller.cpp  ects_controller.cpp  kalman_filter.cpp  rotational_kalman.cpp
pr2_cartesian_clients/: CMakeLists.txt  README.md  package.xml
pr2_cartesian_clients/action/: Folding.action  Manipulation.action  Mechanism.action
pr2_cartesian_clients/config/: client_config.yaml  data_logger.yaml  folding_client_config.yaml  manipulation_client_config.yaml  mechanism_client_config.yaml
pr2_cartesian_clients/data/results/: Manipulation_Experiment_0.bag  Manipulation_Experiment_1.bag  test.bag
pr2_cartesian_clients/include/clients/: folding_client.hpp  manipulation_client.hpp  mechanism_client.hpp
pr2_cartesian_clients/include/manipulation_client/: manipulation_client.hpp
pr2_cartesian_clients/include/utils/: DataLogger.hpp  ExclusiveControllerRunner.hpp  extra.hpp
pr2_cartesian_clients/launch/: cartesian_client.launch  folding_client.launch  manipulation_client.launch  mechanism_client.launch
pr2_cartesian_clients/scripts/: data_logger.py  data_reader.py  manipulation_data_reader.py  mechanism_data_reader.py
pr2_cartesian_clients/src/: manipulation_client.cpp
pr2_cartesian_clients/src/clients/: folding_client.cpp  manipulation_client.cpp  mechanism_client.cpp
pr2_cartesian_clients/src/manipulation_client/: manipulation_client.cpp
pr2_cartesian_clients/src/utils/: DataLogger.cpp  ExclusiveControllerRunner.cpp  data_logger_test.cpp  extra.cpp
pr2_cartesian_clients/srv/: LogMessages.srv
pr2_cartesian_controllers/: CMakeLists.txt  package.xml
pr2_cartesian_controllers/action/: FoldingController.action  GuardedApproach.action  ManipulationController.action  MechanismIdentification.action  Move.action
pr2_cartesian_controllers/config/: MechanismIdentification.cfg  controller_config.yaml  experimental_viz.rviz
pr2_cartesian_controllers/include/pr2_cartesian_controllers/: approach_controller.hpp  controller_template.hpp  folding_controller.hpp  manipulation_controller.hpp  mechanism_identification_controller.hpp  move_controller.hpp
pr2_cartesian_controllers/include/utils/: TwistController.hpp
pr2_cartesian_controllers/launch/: pr2_cartesian_controllers.launch
pr2_cartesian_controllers/src/: approach_controller.cpp  controller_template.cpp  folding_controller.cpp  manipulation_controller.cpp  move_controller.cpp
pr2_cartesian_controllers/src/pr2_cartesian_controllers/: approach_controller.cpp  folding_controller.cpp  manipulation_controller.cpp  mechanism_identification_controller.cpp  move_controller.cpp
pr2_cartesian_controllers/src/utils/: TwistController.cpp
pr2_controller_framework/: CMakeLists.txt  package.xml
pr2_joint_position_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
pr2_joint_position_controllers/action/: PR2TuneJoint.action
pr2_joint_position_controllers/config/: controller_config.yaml  tune_config.yaml
pr2_joint_position_controllers/include/pr2_joint_position_controllers/: approach_joint_controller.hpp  folding_joint_controller.hpp  manipulation_joint_controller.hpp  mechanism_joint_controller.hpp  move_joint_controller.hpp  template_joint_controller.hpp  tune_joint_controller.hpp
pr2_joint_position_controllers/launch/: pr2_controller.launch
pr2_joint_position_controllers/msg/: PIDGains.msg  PR2JointControllerFeedback.msg
pr2_joint_position_controllers/src/: approach_joint_controller.cpp  folding_joint_controller.cpp  manipulation_joint_controller.cpp  mechanism_joint_controller.cpp  move_joint_controller.cpp  template_joint_controller.cpp  tune_joint_controller.cpp
src/: approach_controller.cpp  approach_joint_controller.cpp  controller_template.cpp  joint_controller.cpp  manipulation_client.cpp  manipulation_controller.cpp  manipulation_joint_controller.cpp  move_controller.cpp  move_joint_controller.cpp  template_joint_controller.cpp
(+5 files in other folders)
