<?xml version="1.0"?>
<package>
  <name>pr2_controller</name>
  <version>0.0.1</version>
  <description>Implements a joint controller for the PR2</description>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>KTH</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
   <pr2_controller_interface plugin="${prefix}/controller_plugins.xml" />
 </export>
</package>
