<?xml version="1.0"?>
<package>

  <name>manipulation_controller</name>
  <version>0.0.1</version>
  <description>Implements a manipulation controller</description>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>KTH</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_generation</run_depend>

</package>
