<?xml version="1.0"?>
<package format="2">
  <name>pr2_cartesian_clients</name>
  <version>0.0.3</version>
  <description>
    Package with actionlib clients for the pr2_cartesian_controllers.
  </description>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>eigen_conversions</depend>
  <depend>message_generation</depend>
  <depend>pr2_cartesian_controllers</depend>
  <depend>pr2_mechanism_msgs</depend>
</package>
