<?xml version="1.0"?>
<package format="2">
  <name>pr2_cartesian_controllers</name>
  <version>0.0.3</version>
  <description>
    Implements a cartesian controllers for the PR2, able to run at the realtime
    loop, each with their own actionlib interface for external communication.
  </description>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>kdl_parser</depend>
  <depend>kdl_conversions</depend>
  <depend>message_generation</depend>
</package>
