<?xml version="1.0"?>
<package format="2">
  <name>pr2_controller_framework</name>
  <version>0.0.3</version>
  <description>
    Meta package that aggregates all the pr2 controller framework packages
  </description>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pr2_cartesian_clients</exec_depend>
  <exec_depend>pr2_cartesian_controllers</exec_depend>
  <exec_depend>pr2_joint_position_controllers</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
