<?xml version="1.0"?>
<package format="2">
  <name>pr2_joint_position_controllers</name>
  <version>0.0.3</version>
  <description>
    This package offers a joint controller template for the PR2, which can
    be implemented for any possible PR2 cartesian controller.
  </description>
  <maintainer email="diogoa@kth.se">Diogo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>pr2_controller_interface</depend>
  <depend>pr2_mechanism_model</depend>
  <depend>pr2_cartesian_controllers</depend>
  <depend>pluginlib</depend>

  <export>
   <pr2_controller_interface plugin="${prefix}/controller_plugins.xml" />
 </export>
</package>
